# warpii

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  compile_commands.json  main.cc  notes.md  versions.env  warpii.default.env  warpii.env
.circleci/: config.yml
.github/workflows/: ci_macos.yaml  gh-pages.yml
ci/circleci_image/: Dockerfile
cmake/: warpii-doc.cmake
codes/: CMakeLists.txt
codes/cartesian_euler/: CartesianEulerOperator.h  CartesianEulerPostProcessor.h  PositivityPreservingLimiter.h  cartesian_euler.h  kelvin_helmholtz.cc  sod_shocktube.cc
codes/cylindrical_euler/: RadialEulerOperator.h  RadialEulerPostprocessor.h  function_eval.h  kelvin_helmholtz.cc  main.cc  radial_euler.h  rk.h
docs/: CONTRIBUTING.md  architecture.md  developing.md  doxyfile.in  doxylayout.in.xml  extension_tutorial.md  first_simulation.md  install.md  replace_readme_links.sh  using.md
examples/five-moment/: forward_facing_step.inp  freestream_1d.inp  freestream_2d_diagonal.inp  freestream_pseudo_2d.inp  shu_osher_shock_1d.inp  sod_shocktube.inp
examples/five-moment/forward_facing_step/: Makefile  main.cc
extensions/: CMakeLists.txt  CMakeLists.txt.template  Makefile.in  dummy_extension_main.cc  generate_extension_makefile.cmake  generate_makefile-macos.sh  generate_makefile-ubuntu.sh  tmp.cmake
script/: Makefile  build-release.sh  check-warpii-env.sh  download-dealii-src.sh  install-dealii.sh  install-mpi.sh  install-openmpi.sh
src/: CMakeLists.txt  app.h  dof_utils.cc  dof_utils.h  euler.cc  euler.h  example.cc  extension.h  fpe.cc  fpe.h  function_eval.cc  function_eval.h  geometry.h  grid.cc  grid.h  grid_descriptions.cc  grid_descriptions.h  grid_generation.cc  grid_generation.h  input_file.cc  input_file.h  main.cc  normalization.cc  normalization.h  opts.cc  opts.h  rk.cc  rk.h  tensor_utils.h  timestepper.cc  timestepper.h  tutorial-67.cc  utilities.cc  utilities.h  warpii.cc  warpii.h  wrapper.h
src/cylindrical_five_moment/: cylindrical_five_moment.h  extension.h
src/dgsem/: nodal_dg_discretization.h  persson_peraire_shock_indicator.h
src/euler/: bc_helper.h
src/extensions/: extension.h  extension_generation.cc.in  extension_generation.h
src/five_moment/: bc_helper.h  dg_discretization.cc  dg_discretization.h  dg_operator.cc  dg_operator.h  dg_solution.h  dg_solution_helper.cc  dg_solution_helper.h  dg_solver.cc  dg_solver.h  euler.h  extension.h  five_moment.cc  five_moment.h  fluid_flux_dg_operator.h  fluid_flux_es_dgsem_operator.h  flux_operator.cc  flux_operator.h  postprocessor.h  solution_vec.cc  solution_vec.h  species.cc  species.h  species_func.cc  species_func.h
src/five_moment/fluxes/: jacobian_utils.h  split_form_volume_flux.h  subcell_finite_volume_flux.h
src/maxwell/: bc_map.h  fields.cc  fields.h  maxwell.h  maxwell_flux_dg_operator.h  phmaxwell_func.cc  phmaxwell_func.h
src/nodal_dg/: nodal_dg_discretization.cc
test/: CMakeLists.txt  conservation_test.cc  dof_utils_test.cc  euler_test.cc  euler_test_helpers.cc  euler_test_helpers.h  example_input.txt  input_test.cc  shock_capturing_fv_test.cc  timestepper_test.cc  utilities_test.cc
test/doctests/: CMakeLists.txt  extension_tutorial_test.sh  print_nth_code_block.sh
test/scripts/: compile-extension.sh  fpe-enabled-test.sh  headers-start-with-pragma-once.sh  run-help.sh
writeups/euler_cyl_2d/: main.fdb_latexmk  main.fls  main.tex
