add_executable(cylindrical_khi cylindrical_euler/kelvin_helmholtz.cc)
target_link_libraries(cylindrical_khi warpii)
deal_ii_setup_target(cylindrical_khi)

add_executable(cartesian_khi cartesian_euler/kelvin_helmholtz.cc)
target_link_libraries(cartesian_khi warpii)
deal_ii_setup_target(cartesian_khi)
