add_library(libwarpii
    warpii.cc
    input_file.cc
    timestepper.cc
    grid.cc
    grid_descriptions.cc
    grid_generation.cc
    dof_utils.cc
    five_moment/dg_solution_helper.cc
    five_moment/dg_solver.cc
    five_moment/five_moment.cc
    five_moment/flux_operator.cc
    five_moment/solution_vec.cc
    five_moment/species.cc
    five_moment/species_func.cc
    maxwell/phmaxwell_func.cc
    maxwell/fields.cc
    dgsem/nodal_dg_discretization.cc
    normalization.cc
    fpe.cc
    utilities.cc
    )
deal_ii_setup_target(libwarpii)

